--- a/crud-livro/src/main/resources/application-dev.properties
+++ b/crud-livro/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/livros
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=mul@n
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
